@@ -31,12 +31,12 @@
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
-            <version>17.0.8</version>
+            <version>19.0.2</version>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
-            <version>17.0.8</version>
+            <version>19.0.2</version>
         </dependency>
 
         <dependency>
@@ -87,6 +87,24 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+            </plugin>
+
+            <!-- SureFire plugin -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M5</version>
+                <configuration>
+                    <argLine>
+                        ${argLine} --add-opens javafx.graphics/com.sun.javafx.application=ALL-UNNAMED  
+                        <!-- for JavaFX Testing, We need this because we cannot find out the name of the unnamed module-->
+                        <!-- if we don't have this the tests will fail. bacause javafx.graphics can't open to the "unnamed module"-->
+                    </argLine>
+                    <reportsDirectory>
+                        ${testResultsDir}/junit/${project.artifactId}
+                    </reportsDirectory>
+                </configuration>
+
             </plugin>
 
             <plugin>
